--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
     "presets": ["@babel/preset-env"],
     "plugins": [
-        ["@babel/transform-runtime"],
-        ["babel-plugin-dotenv", {
-            "replacedModuleName": "babel-dotenv"
-         }]
-    ]
+        ["@babel/transform-runtime"]
+    ],
+    "sourceMaps": true,
+    "retainLines": true
 }
