--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
+    "redis": "^3.0.2",
     "ytdl-core": "^4.4.3"
   },
   "devDependencies": {},
