Adicionando plugin do babel

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "presets": ["@babel/preset-env"],
     "plugins": [
-        ["@babel/transform-runtime"]
+        ["@babel/transform-runtime"],
+        ["@babel/plugin-proposal-optional-chaining"]
     ],
     "sourceMaps": true,
     "retainLines": true
