--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TetaBot powered by Discord.JS",
   "main": "./scripts/index.js",
   "dependencies": {
+    "node-pre-gyp": "^0.17.0",
     "@discordjs/opus": "^0.3.3",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
