--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3.1'
+version: "3.1"
 
 services:
-
   mongo:
     image: mongo
     restart: always
     ports:
-      - '27017:27017'
+      - "27017:27017"
     expose:
       - 27017
     environment:
