--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "scripts": {
     "start": "ts-node --transpile-only ./src/index.ts",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect=0.0.0.0:7001 --transpile-only --ignore-watch node_modules src/index.ts --respawn",
+    "lint:fix": "eslint --fix ./src/**",
+    "pretty": "npx prettier --write .",
     "tsc": "tsc"
   },
   "repository": {
@@ -40,6 +42,11 @@
     "node": "^12.13.1"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.6.2"
   }
 }
