--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "description": "TetaBot powered by Discord.JS",
   "main": "./scripts/index.js",
   "dependencies": {
+    "@discordjs/builders": "^0.13.0",
     "@discordjs/opus": "^0.3.3",
+    "@discordjs/rest": "^0.4.1",
+    "@discordjs/voice": "^0.9.0",
     "@types/node": "^17.0.25",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
     "discord": "^0.8.2",
-    "discord.js": "^12.5.1",
+    "discord-api-types": "^0.31.2",
+    "discord.js": "13.6.0",
     "dotenv": "^8.2.0",
-    "ffmpeg-static": "^4.2.7",
-    "mongoose": "^6.3.0",
+    "ffmpeg-static": "^4.4.1",
+    "mongoose": "^6.3.1",
     "node-pre-gyp": "^0.17.0",
     "redis": "^3.0.2",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.14.1",
+    "tweetnacl": "^1.0.3",
     "typescript": "^4.6.3",
-    "ytdl-core": "^4.4.3"
+    "ytdl-core": "^4.11.0"
   },
   "scripts": {
     "start": "ts-node --transpile-only ./src/index.ts",
@@ -45,7 +50,7 @@
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.6.2"
   }
