--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,15 @@
-module.exports = {
-  root: true,
-  parser: "@typescript-eslint/parser",
-  plugins: ["@typescript-eslint"],
-  extends: [
+{
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
+    "prettier"
   ],
-  rules: {
+  "rules": {
     "@typescript-eslint/no-non-null-assertion": "warn",
     "@typescript-eslint/no-non-null-asserted-optional-chain": "warn",
-    "ban-ts-comment": "warn",
-  },
-};
+    "@typescript-eslint/ban-ts-comment": "warn"
+  }
+}
