--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tsconfig-paths": "^3.14.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.6.3",
+    "winston": "^3.7.2",
     "ytdl-core": "^4.11.0"
   },
   "scripts": {
