--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,14 @@
     "@typescript-eslint/no-non-null-assertion": "warn",
     "@typescript-eslint/no-non-null-asserted-optional-chain": "warn",
     "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/quotes": [
+      "off",
+      "single",
+      {
+        "avoidEscape": true,
+        "allowTemplateLiterals": true
+      }
+    ],
     "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
     "comma-dangle": ["error", "always-multiline"],
     "comma-spacing": "error",
@@ -40,7 +48,6 @@
     "no-var": "error",
     "object-curly-spacing": ["error", "always"],
     "prefer-const": "error",
-    "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "space-before-blocks": "error",
     "space-before-function-paren": [
