--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,14 +23,14 @@
         "allowTemplateLiterals": true
       }
     ],
-    "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
+    "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "comma-dangle": ["error", "always-multiline"],
     "comma-spacing": "error",
     "comma-style": "error",
     "curly": ["error", "multi-line", "consistent"],
     "dot-location": ["error", "property"],
     "handle-callback-err": "off",
-    "indent": ["error", "tab"],
+    "indent": ["error", 2],
     "max-nested-callbacks": ["error", { "max": 4 }],
     "max-statements-per-line": ["error", { "max": 2 }],
     "no-console": "off",
