--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "mongoose": "^6.3.1",
     "node-pre-gyp": "^0.17.0",
     "redis": "^3.0.2",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.14.1",
+    "tsyringe": "^4.6.0",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.6.3",
     "winston": "^3.7.2",
