chore: lint fix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,6 +62,7 @@
     "space-infix-ops": "error",
     "space-unary-ops": "error",
     "spaced-comment": "error",
+    "sort-imports": "error",
     "yoda": "error"
   }
 }
