--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
     "max-statements-per-line": ["error", { "max": 2 }],
     "no-console": "off",
     "no-empty-function": "error",
+    "no-extra-semi": "error",
     "no-floating-decimal": "error",
     "no-inline-comments": "error",
     "no-lonely-if": "error",
